--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,8 @@ services:
     environment:
       ANSIBLE_COLLECTIONS_PATH: /usr/share/ansible/collections
       ANSIBLE_ROLES_PATH: /usr/share/ansible/roles
+      WORKSTATION_URL: ${WORKSTATION_URL}
+      WORKSTRATION_USERNAME: ${WORKSTRATION_USERNAME}
+      WORKSTRATION_PASSWORD: ${WORKSTRATION_PASSWORD}
+      WORKSTRATION_PORT: ${WORKSTRATION_PORT}
     image: ${COMMIT_IMAGE:-h4ndzdatm0ld/vmware-mgmt:cli}
