--- a/pb.example.yml
+++ b/pb.example.yml
@@ -1,8 +1,67 @@
+# Ansible Workfow for VMWare Management.
 ---
-- name: "EXAMPLE PLAYBOOK"
-  hosts: "localhost"
-  gather_facts: false
+- name: "DEPLOY TEMPLATE VM"
+  hosts: workstation
+  gather_facts: no
+  collections:
+    - "qsypoq.vmware_desktop"
+
   tasks:
-    - name: "DEBUG HELLO WORLD"
-      debug:
-        msg: "Hello World"
+
+    - name: "List all VMs"
+      win_vmware_desktop_vminfos:
+        api_url: "{{ lookup('env', 'WORKSTATION_URL') | default('localhost', True) }}"
+        api_port: "{{ lookup('env', 'VCENTER_PORT') }}"
+        username: "{{ lookup('env', 'WORKSTRATION_USERNAME') }}"
+        password: "{{ lookup('env', 'WORKSTRATION_PASSWORD') }}"
+        validate_certs: "{{ lookup('env', 'WORKSTRATION_VALIDATE_CERTS') | default('no', True) }}"
+
+    # - name: Create a virtual machine from a template
+    #   community.vmware.vmware_guest:
+    #     api_url: "{{ lookup('env', 'WORKSTATION_URL') }}"
+    #     api_port: "{{ lookup('env', 'VCENTER_PORT') }}"
+    #     username: "{{ lookup('env', 'WORKSTRATION_USERNAME') }}"
+    #     password: "{{ lookup('env', 'WORKSTRATION_PASSWORD') }}"
+    #     validate_certs: "{{ lookup('env', 'WORKSTRATION_VALIDATE_CERTS')  | default('no', True) }}"
+    #     folder: "/Documents/testvms"
+    #     name: "Test-VM"
+    #     state: "poweredon"
+    #     template: "Ubuntu 64-bit"
+    #     # disk:
+    #     # - size_gb: 10
+    #     #   type: thin
+    #     #   datastore: g73_datastore
+    #     # # Add another disk from an existing VMDK
+    #     # - filename: "[datastore1] testvms/testvm_2_1/testvm_2_1.vmdk"
+    #     # hardware:
+    #     #   memory_mb: 512
+    #     #   num_cpus: 6
+    #     #   num_cpu_cores_per_socket: 3
+    #     #   scsi: paravirtual
+    #     #   memory_reservation_lock: True
+    #     #   mem_limit: 8096
+    #     #   mem_reservation: 4096
+    #     #   cpu_limit: 8096
+    #     #   cpu_reservation: 4096
+    #     #   max_connections: 5
+    #     #   hotadd_cpu: True
+    #     #   hotremove_cpu: True
+    #     #   hotadd_memory: False
+    #     #   version: 12 # Hardware version of virtual machine
+    #     #   boot_firmware: "efi"
+    #     # cdrom:
+    #     #     - controller_number: 0
+    #     #       unit_number: 0
+    #     #       state: present
+    #     #       type: iso
+    #     #       iso_path: "[datastore1] livecd.iso"
+    #     # networks:
+    #     # - name: VM Network
+    #     #   mac: aa:bb:dd:aa:00:14
+    #     # wait_for_ip_address: true
+    #   delegate_to: "localhost"
+    #   register: "deploy"
+
+    # - name: "DEBUG"
+    #   debug:
+    #     - msg: "{{ register }}"
