--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,10 @@
 [defaults]
 retry_files_enabled = False
 stdout_callback = yaml
+inventory=./inventory.yml
+gathering=explicit
+host_key_checking=false
+interpreter_python=auto_silent
+deprecation_warnings=false
+# [persistent_connection]
+# command_timeout = 60
