--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,6 @@ services:
       WORKSTRATION_PASSWORD: ${WORKSTRATION_PASSWORD}
       WORKSTRATION_PORT: ${WORKSTRATION_PORT}
       CLONED_VM_NAME: ${CLONED_VM_NAME}
+      WORKSTATION_PROJECTS_DIR: ${WORKSTATION_PROJECTS_DIR}
       VM_ID: ${VM_ID}
     image: ${COMMIT_IMAGE:-h4ndzdatm0ld/vmware-mgmt:cli}
