--- a/pb.clone-vm.yml
+++ b/pb.clone-vm.yml
@@ -3,6 +3,7 @@
 ---
 - name: "DEPLOY TEMPLATE VM"
   hosts: "localhost"
+  connection: "local"
   gather_facts: false
   collections:
     - "qsypoq.vmware_desktop"
