--- a/playbooks/pb.onboard.yml
+++ b/playbooks/pb.onboard.yml
@@ -4,7 +4,19 @@
   gather_facts: true
   become: true
   become_user: "root"
-
+  roles:
+    - role: mrlesmithjr.netplan
+      become: yes
+      netplan_enabled: true
+      netplan_config_file: /etc/netplan/00-installer-config.yaml
+      netplan_renderer: networkd
+      netplan_configuration:
+        network:
+          version: 2
+          ethernets:
+            ens33:
+              addresses:
+                - "{{ hostvars[inventory_hostname].ansible_host }}/24"
   tasks:
     - name: "UPDATE CACHE"
       apt:
@@ -27,53 +39,40 @@
     - name: "INSTALL SPECIFIC PACKAGES DEFINED"
       apt:
         pkg:
-          - netplan.io
-          - needrestart
-          - resolvconf
-        state: latest
+          - "netplan.io"
+          - "needrestart"
+          - "resolvconf"
+          - "open-vm-tools-desktop"
+          - "fuse"
+        state: "latest"
+
+    - name: "CHECK IF SHARED FOLDER EXISTS"
+      stat:
+        path: "/mnt/hgfs/Pyprogz"
+      register: "PYPROGZ"
+
+    - name: "MOUNT SHARED FOLDER"
+      ansible.builtin.shell:
+        cmd: "sudo mount -t fuse.vmhgfs-fuse .host:/ /mnt/hgfs -o allow_other"
+      when: "not PYPROGZ.stat.exists"
 
     - name: "CHANGE HOSTNAME"
       ansible.builtin.hostname:
         name: "{{ inventory_hostname | replace('_', '-') }}"
       become: true
 
-    - name: Add FQDN to /etc/hosts
+    - name: "Add FQDN to /etc/hosts"
       lineinfile:
         dest: "/etc/hosts"
         regexp: '^127\.0\.1\.1'
         line: "127.0.1.1 {{ inventory_hostname  | replace('_', '-') }} {{ inventory_hostname_short }}"
         state: "present"
 
-    - name: "CONFIGURE STATIC NETWORKING"
-      copy:
-        src: etc/netplan/50-cloud-init.yaml
-        dest: /etc/netplan/50-cloud-init.yaml
-        owner: root
-        group: root
-        mode: 0644
-      notify:
-        - netplan apply
-      become: true
-
-    - name: Reboot the server if needed
-      reboot:
-        msg: "Reboot initiated by Ansible because of reboot required file."
-        connect_timeout: 5
-        reboot_timeout: 600
-        pre_reboot_delay: 0
-        post_reboot_delay: 30
-        test_command: whoami
-      when: reboot_required.stat.exists
-
-    - name: Remove old packages from the cache
+    - name: "REMOVE OLD CACHE"
       apt:
-        autoclean: yes
+        autoclean: true
 
-    - name: Remove dependencies that are no longer needed
+    - name: "REMOVE OLD DEPENDENCIES"
       apt:
-        autoremove: yes
-        purge: yes
-
-  handlers:
-    - name: netplan apply
-      command: netplan apply
+        autoremove: true
+        purge: true
