--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -3,6 +3,9 @@ all:
   hosts:
     devpop:
       ansible_host: "127.0.0.1"
+    EdgeRouterX:
+      ansible_host: "192.168.0.1"
+      ansible_network_os: "edgeos"
   children:
     nautobot_servers:
       hosts:
