--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -6,6 +6,8 @@ ansible_become_password: "{{ lookup('env', 'ANSIBLE_SSH_PASSWORD') }}"
 nameservers:
   - "192.168.4.1"
   - "192.168.0.1"
+  - "192.168.100.1"
   - "8.8.8.8"
   - "1.1.1.1"
-gateway: "192.168.4.1"
+mgmt_subnet_mask: "255.255.255.0"
+mgmt_subnet_prefix: "24"
