--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,9 @@ python = "^3.7"
 ansible = "^4.2.0"
 # NOTE: Jinja2 has to be explicitly installed in ansible 2.10
 Jinja2 = "^2.11.2"
-pyntc = "^0.0.11"
 pyvmomi = "^7.0.3"
+aiohttp = "^3.8.1"
+pyntc = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 ansible-lint = "*"
