--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -10,6 +10,8 @@ jobs:
     name: "Login to Docker Hub"
     runs-on: "ubuntu-latest"
     steps:
+      - uses: actions/checkout@v2
+
       - uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
