--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,4 @@ services:
       COMMUNITY: ${COMMUNITY}
     volumes:
       - "./:/usr/src/app"
-    image: ${COMMIT_IMAGE:-h4ndzdatm0ld/vmware-mgmt:cli}
+    image: ${COMMIT_IMAGE:-h4ndzdatm0ld/vmware-mgmt:latest}
