env in pb to run from container

--- a/playbooks/vsphere/pb.get-vcenter-info.yml
+++ b/playbooks/vsphere/pb.get-vcenter-info.yml
@@ -8,6 +8,14 @@
     - "vmware.vmware_rest"
 
   tasks:
+    - name: "SET CONNECTION FACTS"
+      ansible.builtin.set_fact:
+        connection_args:
+          vcenter_hostname: "{{ lookup('env', 'VMWARE_HOST') }}"
+          vcenter_username: "{{ lookup('env', 'VMWARE_USER') }}"
+          vcenter_password: "{{ lookup('env', 'VMWARE_PASSWORD') }}"
+          vcenter_validate_certs: "{{ lookup('env', 'VMWARE_VALIDATE_CERTS') }}"
+
     - name: "COLLECT DATACENTER INFORMATION"
       vmware.vmware_rest.vcenter_datacenter_info:
       register: "DATACENTERS"
