--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -2,10 +2,8 @@
 ansible_ssh_password: "{{ lookup('env', 'ANSIBLE_SSH_PASSWORD') }}"
 ansible_user: "{{ lookup('env', 'ANSIBLE_USER') }}"
 ansible_become_password: "{{ lookup('env', 'ANSIBLE_SSH_PASSWORD') }}"
-vcenter_hostname: "{{ lookup('env', 'VMWARE_HOST') }}"
-vcenter_username: "{{ lookup('env', 'VMWARE_USER') }}"
-vcenter_password: "{{ lookup('env', 'VMWARE_PASSWORD') }}"
-vcenter_validate_certs: "{{ lookup('env', 'VMWARE_VALIDATE_CERTS') }}"
+
+# This is used for the mount point from vmware-workstation pro on devpop
 shared_media: false
 nameservers:
   - "192.168.4.1"
