--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ Jinja2 = "^2.11.2"
 pyvmomi = "^7.0.3"
 aiohttp = "^3.8.1"
 pynautobot = "^1.0.4"
+paramiko = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 ansible-lint = "*"
