--- a/playbooks/vsphere/pb.deploy-vm.yml
+++ b/playbooks/vsphere/pb.deploy-vm.yml
@@ -12,7 +12,7 @@
     validate_certs: "{{ lookup('env', 'VMWARE_VALIDATE_CERTS') }}"
     datacenter: "CrunchyDatacenter"
     folder: "Nautobot Plugins"
-    template: "Ubuntu-Template"
+    template: "ubuntu-template"
 
   tasks:
     - name: "CLONE TEMPLATE VM - PRE-DEFINED IP"
