--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -12,6 +12,8 @@ all:
         #   hosts:
         servers_esxi:
           hosts:
+            nautobot-shodan:
+              ansible_host: "192.168.100.114"
             nautobot-ipfabric:
               ansible_host: "192.168.100.197"
             nautobot-aws:
