--- a/playbooks/common/pb.onboard.yml
+++ b/playbooks/common/pb.onboard.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: "servers"
+- hosts: "nautobot-nvidia"
   gather_facts: true
   become: true
   become_user: "root"
@@ -18,7 +18,7 @@
         network:
           version: 2
           ethernets:
-            ens33:
+            ens160:
               addresses:
                 - "{{ hostvars[inventory_hostname].ansible_host }}/{{ mgmt_subnet_prefix }}"
               nameservers:
@@ -31,17 +31,13 @@
                 search:
                   - "heshlaw.local"
               gateway4: "{{ gateway }}"
-              optional: true
-              # routes:
-              #   - to: 0.0.0.0/0
-              #     via: 192.168.4.1
-              #     on-link: true
-              #   - to: 0.0.0.0/0
-              #     via: 192.168.4.1
-              #     table: 100
-              # routing-policy:
-              #   - from: 192.168.4.0/24
-              #     table: 100
+              routes:
+                - to: 0.0.0.0/0
+                  via: 192.168.100.1
+                  table: 100
+              routing-policy:
+                - from: 192.168.100.0/24
+                  table: 100
   tasks:
     - name: "UPDATE NAMESERVER ENTRY"
       lineinfile:
@@ -110,15 +106,6 @@
         line: "127.0.1.1 {{ inventory_hostname  | replace('_', '-') }} {{ inventory_hostname_short }}"
         state: "present"
 
-    - name: "REMOVE OLD CACHE"
-      apt:
-        autoclean: true
-
-    - name: "REMOVE OLD DEPENDENCIES"
-      apt:
-        autoremove: true
-        purge: true
-
     - name: "MOUNT LINUX SHARE FROM TRUENAS"
       ansible.posix.mount:
         src: "truenas.heshlaw.local:/mnt/nebuchadnezzar"
@@ -129,22 +116,3 @@
       register: "SHARED_MOUNT"
     - debug:
         var: "SHARED_MOUNT"
-
-    - name: "CHECK IF REBOOT IS NEEDED"
-      stat:
-        path: "/var/run/reboot-required"
-      register: "reboot_required"
-
-    # - name: "RUN NEEDRESTART"
-    #   command: "needrestart -r a"
-    #   when: "not reboot_required.stat.exists"
-
-    - name: "REBOOT IF NEEDED"
-      reboot:
-        msg: "Reboot initiated by Ansible because of reboot required file."
-        connect_timeout: 5
-        reboot_timeout: 600
-        pre_reboot_delay: 0
-        post_reboot_delay: 30
-        test_command: "whoami"
-      when: "reboot_required.stat.exists"
