--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,19 @@ services:
       VMWARE_VALIDATE_CERTS: ${VMWARE_VALIDATE_CERTS}
     volumes:
       - ".:/usr/src/app"
+  terraform:
+    env_file:
+      - ".env"
+    image: "hashicorp/terraform:latest"
+    working_dir: "/usr/src/app"
+    network_mode: "host"
+    environment:
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_REGION: "${AWS_REGION}"
+      TF_VAR_DO_TOKEN: "${TF_DO_TOKEN}"
+      DO_TOKEN: "${DO_TOKEN}"
+      TF_VAR_AWS_ACCESS_KEY_ID: "${TF_VAR_AWS_ACCESS_KEY_ID}"
+      TF_VAR_AWS_SECRET_ACCESS_KEY: "${TF_VAR_AWS_SECRET_ACCESS_KEY}"
+    volumes:
+      - "./:/usr/src/app"
