--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,10 @@ services:
     build:
       target: cli
       context: .
-    network_mode: host # Allow local host access.
+    network_mode: host
     environment:
       ANSIBLE_COLLECTIONS_PATH: /usr/share/ansible/collections
       ANSIBLE_ROLES_PATH: /usr/share/ansible/roles
-      WORKSTATION_URL: ${WORKSTATION_URL}
-      WORKSTRATION_USERNAME: ${WORKSTRATION_USERNAME}
-      WORKSTRATION_PASSWORD: ${WORKSTRATION_PASSWORD}
-      WORKSTRATION_PORT: ${WORKSTRATION_PORT}
-      CLONED_VM_NAME: ${CLONED_VM_NAME}
-      WORKSTATION_PROJECTS_DIR: ${WORKSTATION_PROJECTS_DIR}
-      VM_ID: ${VM_ID}
       ANSIBLE_USER: ${ANSIBLE_USER}
       ANSIBLE_SSH_PASSWORD: ${ANSIBLE_SSH_PASSWORD}
       VMWARE_HOST: ${VMWARE_HOST}
@@ -33,4 +26,3 @@ services:
     volumes:
       - "./:/usr/src/app"
     image: ${COMMIT_IMAGE:-h4ndzdatm0ld/vmware-mgmt:latest}
-    
