--- a/playbooks/vsphere/pb.configure-vsphere.yml
+++ b/playbooks/vsphere/pb.configure-vsphere.yml
@@ -19,7 +19,9 @@
         servers:
           - "time.google.com"
       register: "result"
-    - debug:
+
+    - name: "DEBUG"
+      ansible.builtin.debug:
         msg: "{{ result }}"
 
     - name: "CHECK HOSTNAME OF VCENTER"
@@ -27,7 +29,9 @@
         state: "test"
         name: "vcenter.heshlaw.local"
       register: "result"
-    - debug:
+
+    - name: "DEBUG"
+      ansible.builtin.debug:
         msg: "{{ result }}"
 
     - name: "SET DNS"
@@ -47,5 +51,7 @@
         servers:
           - "google.com"
       register: "result"
-    - debug:
+
+    - name: "DEBUG"
+      ansible.builtin.debug:
         msg: "{{ result }}"
