--- a/playbooks/vsphere/pb.get-vcenter-info.yml
+++ b/playbooks/vsphere/pb.get-vcenter-info.yml
@@ -12,7 +12,9 @@
     - name: "COLLECT DATACENTER INFORMATION"
       vmware.vmware_rest.vcenter_datacenter_info:
       register: "DATACENTERS"
-    - debug:
+
+    - name: "DEBUG"
+      ansible.builtin.debug:
         msg: "{{ DATACENTERS }}"
 
     - name: "COLLECT VMs"
